# cf-r2-sdk

./: .env.example  Cargo.toml  README.md  flake.nix  renovate.json
.github/workflows/: test.yaml
data/: LICENSE.md
examples/: simple.rs
src/: builder.rs  error.rs  lib.rs  operator.rs  utils.rs
src/utils/: builder.rs  operator.rs
