[package]
name = "cf-r2-sdk"
version = "0.1.17"
authors = ["Myxogastria0808 <r.rstudio.c@gmail.com>"]
description = "This package is an 'UNOFFICIAL' cloudflare r2 sdk."
license = "MIT"
edition = "2024"
exclude = ["flake.lock", ".env", ".env.example", "data/"]
repository = "https://github.com/Myxogastria0808/cf-r2-sdk"
documentation = "https://docs.rs/cf-r2-sdk"
keywords = ["cloudflare", "r2", "sdk", "unofficial"]

[dependencies]
anyhow = "1.0.95"
aws-sdk-s3 = { version = "1.69.0", features = ["behavior-version-latest"] }
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
