[package]
name = "cf-r2-sdk"
version = "3.1.5"
authors = ["Myxogastria0808 <r.rstudio.c@gmail.com>"]
description = "This package is an 'UNOFFICIAL' cloudflare r2 sdk."
license = "Apache-2.0"
edition = "2021"
exclude = ["flake.lock", ".env", ".env.example", "data/", ".github/", "renovate.json", ".vscode", ".direnv/", ".envrc", ".gitignore"]
repository = "https://github.com/Myxogastria0808/cf-r2-sdk"
documentation = "https://docs.rs/cf-r2-sdk"
keywords = ["cloudflare", "r2", "sdk", "unofficial"]

[dependencies]
aws-sdk-s3 = { version = "1.69.0", features = ["behavior-version-latest"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
